--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories("C:/Users/zengt/OneDrive/Documents/GitHub/project-3/pugixml-master/src")
 
-add_executable(project_3 main.cpp pugixml-master/src/pugixml.cpp)
+add_executable(project_3 main.cpp pugixml-master/src/pugixml.cpp
+        Trie.cpp
+        hashTable.h
+        hashTable.cpp
+)
